--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "web-vitals": "^1.0.1",
     "web3": "^1.5.2"
   },
+  "homepage": "http://Mostafa54225.github.io/Ethereum-Voting-System",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
